# SODA

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  soda_benchmark.py
docs/: GITHUB_RELEASE_CHECKLIST.md
examples/: README.md  apply_to_h5ad.py  prepare_demo_data.R  run_real_data_demo.py
src/soda/: __init__.py  __main__.py  _version.py  cli.py  model.py  scanpy.py
