[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soda-sc"
version = "0.1.0"
description = "SODA: Sinkhorn Optimal Transport with Divergence-Based Adaptation for single-cell integration."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["single-cell", "batch integration", "optimal transport", "anndata", "scanpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "POT>=0.9",
    "scanpy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
soda-run = "soda.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
